Add: Abyss Logger Fix: SQL Query issues