@@ -18,10 +18,16 @@ kotlin {
 dependencies {
     implementation("net.minestom:minestom:2026.03.03-1.21.11")
     implementation("com.mysql:mysql-connector-j:9.2.0")
+    implementation("org.slf4j:slf4j-simple:2.0.13")
 }
 
 application {
     mainClass.set("me.totxy.MainKt")
+    applicationDefaultJvmArgs = listOf(
+        "--add-opens=java.base/java.lang=ALL-UNNAMED",
+        "-XX:+EnableDynamicAgentLoading",
+        "-Djdk.reflect.useDirectMethodHandle=false"
+    )
 }
 
 tasks.test {
